--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "delay": "^4.3.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "serialport": "^8.0.7"
+    "serialport": "^8.0.7",
+    "socket.io": "^2.3.0"
   }
 }
