--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd front && npm run build"
+    "build": "cd front && npm run build",
+    "start" : "node main.js",
+    "install-front": "cd front && npm i"
   },
   "keywords": [],
   "author": "",
